--- a/test.Rmd
+++ b/test.Rmd
@@ -2,7 +2,7 @@
 title: "test"
 author: "Isaiah"
 date: "2022-12-31"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
